# Scientific-Visualization

./: #read me  README.md
SmokeOSX/: CMakeLists.txt  Makefile  fluids.c  fluids.cpp  smoke  transform.h
SmokeOSX/fftw-2.1.5/sourceAndDoc/: Makefile  config.status  libtool
SmokeOSX/fftw-2.1.5/sourceAndDoc/doc/: Makefile
SmokeOSX/fftw-2.1.5/sourceAndDoc/fftw/: Makefile
SmokeOSX/fftw-2.1.5/sourceAndDoc/fftw/.deps/: config.Plo  executor.Plo  fftwf77.Plo  fftwnd.Plo  fn_1.Plo  fn_10.Plo  fn_11.Plo  fn_12.Plo  fn_13.Plo  fn_14.Plo  fn_15.Plo  fn_16.Plo  fn_2.Plo  fn_3.Plo  fn_32.Plo  fn_4.Plo  fn_5.Plo  fn_6.Plo  fn_64.Plo  fn_7.Plo  fn_8.Plo  fn_9.Plo  fni_1.Plo  fni_10.Plo  fni_11.Plo  fni_12.Plo  fni_13.Plo  fni_14.Plo  fni_15.Plo  fni_16.Plo  fni_2.Plo  fni_3.Plo  fni_32.Plo  fni_4.Plo  fni_5.Plo  fni_6.Plo  fni_64.Plo  fni_7.Plo  fni_8.Plo  fni_9.Plo  (+33 more)
SmokeOSX/fftw-2.1.5/sourceAndDoc/mpi/: Makefile
SmokeOSX/fftw-2.1.5/sourceAndDoc/rfftw/: Makefile
SmokeOSX/fftw-2.1.5/sourceAndDoc/rfftw/.deps/: fcr_1.Plo  fcr_10.Plo  fcr_11.Plo  fcr_12.Plo  fcr_128.Plo  fcr_13.Plo  fcr_14.Plo  fcr_15.Plo  fcr_16.Plo  fcr_2.Plo  fcr_3.Plo  fcr_32.Plo  fcr_4.Plo  fcr_5.Plo  fcr_6.Plo  fcr_64.Plo  fcr_7.Plo  fcr_8.Plo  fcr_9.Plo  fhb_10.Plo  fhb_16.Plo  fhb_2.Plo  fhb_3.Plo  fhb_32.Plo  fhb_4.Plo  fhb_5.Plo  fhb_6.Plo  fhb_7.Plo  fhb_8.Plo  fhb_9.Plo  fhf_10.Plo  fhf_16.Plo  fhf_2.Plo  fhf_3.Plo  fhf_32.Plo  fhf_4.Plo  fhf_5.Plo  fhf_6.Plo  fhf_7.Plo  fhf_8.Plo  (+27 more)
SmokeOSX/fftw-2.1.5/sourceAndDoc/tests/: Makefile
SmokeOSX/fftw-2.1.5/sourceAndDoc/tests/.deps/: fftw_test.Po  rfftw_test.Po  test_main.Po
SmokeOSX/fftw-2.1.5/sourceAndDoc/threads/: Makefile
SmokeOSX/nbproject/: configurations.xml  project.xml
SmokeOSX/nbproject/private/: configurations.xml  private.xml
SmokeWin/: Smoke.iobj  Smoke.ipdb  Smoke.sln  UpgradeLog.htm  fluids.c  fluids.cpp  transform.h  widget.cpp
SmokeWin/FFTW/: FFTW.vcxproj  FFTW.vcxproj.filters
SmokeWin/FFTW/Release/FFTW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
SmokeWin/GLUT/GL/: glui.h
SmokeWin/Smoke/: Smoke.vcxproj  Smoke.vcxproj.filters  backup.cpp
SmokeWin/Smoke/Release/Smoke.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Smoke.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SmokeWin/glui-2.36/src/msvc/: UpgradeLog.htm  example1.vcxproj  example2.vcxproj  example3.vcxproj  example4.vcxproj  example5.vcxproj  example6.vcxproj  glui.sln  glui.vcxproj  gluidll.vcxproj
SmokeWin/glui-2.36/src/msvc/Debug/: _glui library.idb
SmokeWin/glui-2.36/src/msvc/Debug/_glui library.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  _glui library.lastbuildstate
