cmake_minimum_required(VERSION 3.9)
project(SmokeOSX)

set(CMAKE_CXX_STANDARD 11)

add_executable(SmokeOSX
        fftw-2.1.5/include/fftw.h
        fftw-2.1.5/include/rfftw.h
        fftw-2.1.5/sourceAndDoc/fftw/config.c
        fftw-2.1.5/sourceAndDoc/fftw/config.h
        fftw-2.1.5/sourceAndDoc/fftw/executor.c
        fftw-2.1.5/sourceAndDoc/fftw/fftw-int.h
        fftw-2.1.5/sourceAndDoc/fftw/fftw.h
        fftw-2.1.5/sourceAndDoc/fftw/fftwf77.c
        fftw-2.1.5/sourceAndDoc/fftw/fftwnd.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_1.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_10.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_11.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_12.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_13.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_14.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_15.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_16.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_2.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_3.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_32.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_4.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_5.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_6.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_64.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_7.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_8.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_9.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_1.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_10.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_11.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_12.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_13.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_14.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_15.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_16.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_2.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_3.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_32.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_4.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_5.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_6.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_64.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_7.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_8.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_9.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_10.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_16.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_2.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_3.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_32.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_4.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_5.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_6.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_64.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_7.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_8.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_9.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_10.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_16.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_2.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_3.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_32.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_4.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_5.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_6.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_64.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_7.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_8.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_9.c
        fftw-2.1.5/sourceAndDoc/fftw/generic.c
        fftw-2.1.5/sourceAndDoc/fftw/malloc.c
        fftw-2.1.5/sourceAndDoc/fftw/planner.c
        fftw-2.1.5/sourceAndDoc/fftw/putils.c
        fftw-2.1.5/sourceAndDoc/fftw/rader.c
        fftw-2.1.5/sourceAndDoc/fftw/timer.c
        fftw-2.1.5/sourceAndDoc/fftw/twiddle.c
        fftw-2.1.5/sourceAndDoc/fftw/wisdom.c
        fftw-2.1.5/sourceAndDoc/fftw/wisdomio.c
        fftw-2.1.5/sourceAndDoc/fortran/fftw_f77.i
        fftw-2.1.5/sourceAndDoc/matlab/fftw.c
        fftw-2.1.5/sourceAndDoc/mpi/fftw_f77_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/fftw_f77_mpi.h
        fftw-2.1.5/sourceAndDoc/mpi/fftw_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/fftw_mpi.h
        fftw-2.1.5/sourceAndDoc/mpi/fftw_mpi_test.c
        fftw-2.1.5/sourceAndDoc/mpi/fftwnd_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/rfftw_f77_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/rfftw_mpi.h
        fftw-2.1.5/sourceAndDoc/mpi/rfftw_mpi_test.c
        fftw-2.1.5/sourceAndDoc/mpi/rfftwnd_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/sched.c
        fftw-2.1.5/sourceAndDoc/mpi/sched.h
        fftw-2.1.5/sourceAndDoc/mpi/test_sched.c
        fftw-2.1.5/sourceAndDoc/mpi/test_transpose_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/TOMS_transpose.c
        fftw-2.1.5/sourceAndDoc/mpi/TOMS_transpose.h
        fftw-2.1.5/sourceAndDoc/mpi/transpose_mpi.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_1.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_11.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_12.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_128.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_13.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_14.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_15.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_64.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_1.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_11.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_12.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_128.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_13.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_14.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_15.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_64.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/rconfig.c
        fftw-2.1.5/sourceAndDoc/rfftw/rexec.c
        fftw-2.1.5/sourceAndDoc/rfftw/rexec2.c
        fftw-2.1.5/sourceAndDoc/rfftw/rfftw.h
        fftw-2.1.5/sourceAndDoc/rfftw/rfftwf77.c
        fftw-2.1.5/sourceAndDoc/rfftw/rfftwnd.c
        fftw-2.1.5/sourceAndDoc/rfftw/rgeneric.c
        fftw-2.1.5/sourceAndDoc/rfftw/rplanner.c
        fftw-2.1.5/sourceAndDoc/tests/fftw_test.c
        fftw-2.1.5/sourceAndDoc/tests/rfftw_test.c
        fftw-2.1.5/sourceAndDoc/tests/test_main.c
        fftw-2.1.5/sourceAndDoc/tests/test_main.h
        fftw-2.1.5/sourceAndDoc/threads/executor_threads.c
        fftw-2.1.5/sourceAndDoc/threads/fftw_f77_threads.c
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads-int.h
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads.c
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads.h
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads_test.c
        fftw-2.1.5/sourceAndDoc/threads/fftwnd_threads.c
        fftw-2.1.5/sourceAndDoc/threads/rexec2_threads.c
        fftw-2.1.5/sourceAndDoc/threads/rexec_threads.c
        fftw-2.1.5/sourceAndDoc/threads/rfftw_f77_threads.c
        fftw-2.1.5/sourceAndDoc/threads/rfftw_threads.h
        fftw-2.1.5/sourceAndDoc/threads/rfftw_threads_test.c
        fftw-2.1.5/sourceAndDoc/threads/rfftwnd_threads.c
        nbproject/private/c_standard_headers_indexer.c
        nbproject/private/cpp_standard_headers_indexer.cpp
        fluids.c)
